# LegoVm

./: .gitignore  CMakeLists.txt  README.md
docs/: program_structure.md
include/: exception.h  heap.h  types.h  vm.h
src/: CMakeLists.txt  heap.cpp  vm.cpp
tests/: CMakeLists.txt  main.cpp
